! Fixed capacity bar in PM area. (index.css) ! Added an overflow hack to cat_bar/title_bar to avoid any annoying float glitches in the future. I'd rather not use it, though. (index.css) * Renamed 'MSN Messenger' to 'Live Messenger' in the language files. (Internally, it's still the same old horrible MSN Messenger.) (index.english.php, Profile.english.php)

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -1109,8 +1109,8 @@ dl.settings dt a img
 ------------------------------------------------------- */
 .cat_bar, .title_bar
 {
-	max-height: 150px;
 	padding: 6px 9px;
+	overflow: auto;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -3156,7 +3156,7 @@ dl.stats dd
 {
 	background: #f0f4f7;
 	display: block;
-	margin: 0.5em 0 0 1em;
+	margin: 0.2em 0 0 1em;
 	height: 1em;
 	border: 1px solid #adadad;
 	width: 10em;
